<resources>
    <string name="app_name">Florianópolis Bus</string>
    <string name="title_stop_list">Stop List</string>
    <string name="title_departure_list">Departure List</string>

    <string name="ok">OK</string>
    <string name="empty_list_message">Your search returns no data</string>
    <string name="search_hint">Type a street name...</string>
    <string name="stops">Stops</string>
    <string name="departures">Departures</string>
    <string name="weekday">Weekday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="see_departures">see departures</string>

    <string name="empty_list_stop_message">This route has no stops</string>
    <string name="empty_list_departure_message">This route has no departures</string>

    <string name="exception_retrieve_values_title">Error</string>
    <string name="exception_retrieve_values_message">Impossible to retrieve information.</string>

    <string name="exception_route_unavailable">This route is unavailable.</string>
    <string name="title_activity_departure">DepartureActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
