<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/routeName"
        style="@style/AppHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/AppSubHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/departures"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone">
        </ProgressBar>

        <TextView
            android:id="@+id/emptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/empty_list_departure_message"
            android:visibility="gone">
        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weekday"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/departureListWeekday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    tools:listitem="@layout/content_route_list"/>

                <TextView
                    style="@style/AppTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/departureListSaturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    tools:listitem="@layout/content_route_list"/>

                <TextView
                    style="@style/AppTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/departureListSunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    tools:listitem="@layout/content_route_list"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>

